<resources>
    <string name="app_name">EcoFun</string>
    <string name="jungleImageViewTransition">jungleImageViewTransitionString</string>
    <string name="animalsCarImageViewTransition">animalsCarImageViewTransitionString</string>


    <string name="jungleBackgroundDescription">Jungle Background</string>
    <string name="cityBackgroundDescription"> City Background </string>
    <string name="animalsCarDescription">Car with Animals moving</string>
    <string name="woodenBoardDescription">A Wooden Board With Text</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or_signup">Or, Signup!</string>
    <string name="orSocial">or Login With Social Media...</string>
    <string name="signUp">SignUp</string>
    <string name="orLogin">Or, Login!</string>

    <string name="transition_loginWithSocial">LoginSocialTransition</string>
    <string name="facebook_app_id">244702353372510</string>
    <string name="fb_login_protocol_scheme">fb244702353372510</string>

    <string name="activity_recognition_description"> Need your permission to recognise your activity, like walking, running, going by vehicle, etc.  so that we can start calculating distance so you can earn points! </string>
    <string name="location_description">Need your permission to access your location for calculating distance for your points</string>
    <string name="location_background_description">Need your permission to access your background location in order to calculate your distance even in the background!</string>
    <string name="storage_description">Need your permission to read your storage so that you can upload photos as profile pic and upload you doing good deeds to earn points!</string>
    <string name="ACTIVITY_RECOGNITION">Activity Recognition</string>
    <string name="FINE_LOCATION">Access Fine Location</string>
    <string name="BACKGROUND_LOCATION">Access Background Location</string>
    <string name="EXTERNAL_STORAGE">Access Your Storage</string>
    <string name="monkey_contentDescription">Monkey Holding Wooden Board showing App Logo</string>
    <string name="copyrights_credit">Made by Manas Malla ©</string>
    <string name="login_with_social">Login With Social</string>
    <string name="sign_in_with_google_button_description">Sign In With Google Button</string>
    <string name="sign_in_with_facebook_button_description">Sign In With Facebook Button</string>
    <string name="sign_in_with_twitter_button_description">Sign In With Twitter Button</string>
    <string name="sign_in_with_instagram_button_description">Sign In With Instagram Button</string>
    <string name="EmailId">Enter your email ID!</string>
    <string name="continueButton">Continue</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>

    <string name="title_ws1"> InCrEaSinG PoLlUtIoN </string>
    <string name="title_ws2"> LeT’s MaKe oUr CaRbOn FOoTpRinT GrEeNeR </string>
    <string name="title_ws3"> DrIvE LeSs! </string>
    <string name="title_ws4"> EaRn GrEeN pOiNtS </string>
    <string name="title_ws5"> MoRe TrEEs = \n MoRe GrEEn pOinTs \n = MoRe haPPineSS!!</string>
    <string name="title_ws6">SaVe Us &amp; tHe WaTeR BoDy</string>
    <string name="title_ws7">AvEnGeRs.....AsSeMbLe!!</string>
    <string name="title_ws8">PeRmIsSioN pLeAsE!</string>
    <string name="title_ws9">LeT\'s GeT RuNnInG!</string>

    <string name="developer_name">Manas Malla</string>
    <string name="developer_description">An Enthusiastic Developer 👨‍💻! A Studious Student👨‍🎓! A Gang Leader to Bro’s n Sis!  </string>
    <string name="socialLinks">Check me out on: \n Facebook - <a href="http://facebook.com/manasmalla.dev"> http://facebook.com/manasmalla.dev</a> \n Instagram -<a href=" http://instagram.com/malla_manas">  http://instagram.com/malla_manas </a> \n Twitter- <a href="http://twitter.com/manas_malla_">http://twitter.com/manas_malla_</a> \n Github- <a href="http://github.com/ManasMalla">http://github.com/ManasMalla</a> \n Website - <a href="https://manasmalla.github.io">https://manasmalla.github.io</a></string>
    <string name="appTitleTransitionSocialUpdates">appTitleTransitionSocialUpdates</string>
    <string name="jungleBackgroundSocialUpdates">jungleBackgroundSocialUpdates</string>
    <string name="description_manasmalla_transition">description_manasmalla_transition</string>
    <string name="leaderboard">LeAdErBoArD</string>
    <string name="shutterstockLiscence"><a href="https://www.shutterstock.com/g/svaga\"> Jungle Background, Animals and other related Images used under license from Shutterstock.com</a>></string>
    <string name="mapContinentLiscence"><a href="https://www.whatarethe7continents.com/free-coloring-map/\"> Earth Map used from Whatarethe7continents.com© </a>></string>
    <string name="AWSString"><a href="https://aws.amazon.com"> Amazon Web Server hosts Parse Serves under the Free Tier Limit! \n https://aws.amazon.com/</a> </string>
    <string name="ParseString"><a href="https://parseplatform.org/"> Parse Server helps us to store your data! \n https://parseplatform.org/</a> </string>


    <string name="activity_in_vehicle">In Vehicle</string>
    <string name="activity_on_bicycle">On Bicycle</string>
    <string name="activity_on_foot">On Foot</string>
    <string name="activity_running">Running</string>
    <string name="activity_still">Still</string>
    <string name="activity_tilting">Tilting</string>
    <string name="activity_walking">Walking</string>
    <string name="activity_unknown">Unknown</string>
    <string name="navbarTransition">navbarTransition</string>
    <string name="ecofunNotificationText">Come on, Get up and move! Activity Time! This notification helps EcoFun to check for activity updates in the background even if the app is closed! 😃</string>

</resources>